fix notes overflow

--- a/app/assets/stylesheets/admin/activities.css
+++ b/app/assets/stylesheets/admin/activities.css
@@ -32,7 +32,7 @@
   padding: 1px;
 }
 
-#participants notes-td {
+#participants .notes-td {
   overflow: hidden;
 }
 
